# RTFD

./: CHANGELOG.md  CONTRIBUTING.md  PLUGIN.md  README.md  pyproject.toml
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.github/workflows/: docker-publish.yml  release-and-publish.yml  release.yml  test.yml
docs/: README.md
scripts/: bump_version.py  sync_json_versions.py  update_changelog.py
src/RTFD/: __init__.py  cache.py  chunking.py  config_generator.py  content_utils.py  server.py  token_counter.py  utils.py
src/RTFD/providers/: __init__.py  base.py  crates.py  dockerhub.py  gcp.py  github.py  godocs.py  npm.py  pypi.py  zig.py
tests/: conftest.py  test_cache.py  test_chunking.py  test_content_utils.py  test_discovery.py  test_server.py
tests/test_integration/: test_crates_integration.py  test_gcp_integration.py  test_github_integration.py  test_npm_integration.py  test_pypi_integration.py
tests/test_providers/: test_crates.py  test_dockerhub_dockerfile.py  test_gcp.py  test_github.py  test_godocs.py  test_npm.py  test_pypi.py  test_zig.py
tests/test_utils/: __init__.py  test_github_auth.py
