[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rtfd"
version = "0.1.0"
description = "MCP gateway server for library documentation search (Google, GitHub, PyPI)."
authors = [{ name = "Doc MCP" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.22.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    "docutils>=0.22.3",
    "tiktoken>=0.12.0"
]

[project.scripts]
rtfd = "RTFD.server:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }
